--- a/src/app/pet-list/pet-list.component.html
+++ b/src/app/pet-list/pet-list.component.html
@@ -1,5 +1,5 @@
 <div>
-    <table class="table table-bordered table-hover table-light w-75 mx-auto">
+    <table class="table table-bordered table-hover table-light w-75 mx-auto mt-3">
         <thead class="thead-dark">
             <tr>
                 <th>id</th>
