--- a/src/app/pet-details/pet-details.component.html
+++ b/src/app/pet-details/pet-details.component.html
@@ -7,6 +7,7 @@
         <div class="card-body pt-1">
             <p>Species: {{pet.species}} Sex: {{pet.sex}}</p>
             <p>{{pet.details}}</p>
+            <p>Price: ${{pet.price}}</p>
             <p>Status: {{pet.in_stock ? "In stock" : "Sold!"}}</p>
             <!-- <button type="button" class="btn btn-primary" *ngIf="pet.in_stock" (click)="sellPet()">Sell</button> -->
             <!-- <button type="button" class="btn btn-dark" (click)="deletePet(pet.id)">Remove Pet Data</button> -->
