--- a/src/app/pet-list/pet-list.component.html
+++ b/src/app/pet-list/pet-list.component.html
@@ -2,19 +2,20 @@
     <table class="table table-bordered table-hover table-light w-75 mx-auto mt-3">
         <thead class="thead-dark">
             <tr>
-                <th>id</th>
                 <th>Name</th>
                 <th>Species</th>
+                <!-- <th>Sex</th> -->
                 <th>In Stock</th>
+                <!-- <th>id</th> -->
             </tr>
         </thead>
         <tbody class="tbody">
-            <tr *ngFor="let pet of pets" (click)="onSelect(pet)" [class.selected]="pet === selectedPet"
-                routerLink="/details/{{pet.id}}">
-                <td>{{pet.id}}</td>
+            <tr *ngFor="let pet of pets" routerLink="/details/{{pet._id}}">
                 <td>{{pet.name}}</td>
                 <td>{{pet.species}}</td>
+                <!-- <td>{{pet.sex}}</td> -->
                 <td>{{pet.in_stock}}</td>
+                <!-- <td>{{pet._id}}</td> -->
             </tr>
         </tbody>
     </table>
