--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,6 +17,9 @@
             <li class="nav-item">
                 <a class="nav-link" routerLink="/petlist" routerLinkActive="active">Catalogue</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/petform" routerLinkActive="active">Pet Request</a>
+            </li>
         </ul>
     </div>
 </nav>
