added post endpoint

--- a/src/app/pet-details/pet-details.component.html
+++ b/src/app/pet-details/pet-details.component.html
@@ -3,7 +3,7 @@
         <h5 class="card-header card-title text-light">
             {{pet.name}}
         </h5>
-        <img class="pet-image" src={{pet.image}} />
+        <img class="pet-image" src={{pet.image}} alt={{pet.species}}/>
         <div class="card-body pt-1">
             <p>Species: {{pet.species}} Sex: {{pet.sex}}</p>
             <p>{{pet.details}}</p>
