--- a/src/app/pet-display/pet-display.component.html
+++ b/src/app/pet-display/pet-display.component.html
@@ -2,9 +2,11 @@
     <h1 class="ml-5">The Pets!</h1>
     <div class="pet-container">
         <div *ngFor="let pet of pets">
-            <a routerLink="/details/{{pet._id}}">
-                <img src={{pet.image}} alt={{pet.species}}>
-            </a>
+            <div *ngIf="pet.image">
+                <a routerLink="/pet/{{pet._id}}">
+                    <img src={{pet.image}} alt={{pet.species}}>
+                </a>
+            </div>
         </div>
     </div>
 </div>
