--- a/src/app/pet-form/pet-form.component.html
+++ b/src/app/pet-form/pet-form.component.html
@@ -54,12 +54,15 @@
     <div class="container success-container alert alert-success mt-3" [hidden]="!submitted">
         <h4 class="alert-heading">Success!</h4>
         <h5>You submitted the following</h5>
+        <p class="mb-0">Id: {{model._id}}</p>
         <p class="mb-0">Name: {{model.name}}</p>
         <p class="mb-0">Species: {{model.species}}</p>
         <p class="mb-0">Sex: {{model.sex}}</p>
         <p class="mb-0">Price: {{model.price}}</p>
         <p class="mb-0">Image: {{model.image}}</p>
         <p class="mb-0">Description: {{model.description}}</p>
-        <button class="btn btn-dark">Edit</button>
+        <a routerLink="/pet/{{model._id}}">
+            <button class="btn btn-dark">View Pet</button>
+        </a>
     </div>
 </div>
