--- a/src/app/pet-list/pet-list.component.html
+++ b/src/app/pet-list/pet-list.component.html
@@ -10,7 +10,7 @@
             </tr>
         </thead>
         <tbody class="tbody">
-            <tr *ngFor="let pet of pets" routerLink="/details/{{pet._id}}">
+            <tr *ngFor="let pet of pets" routerLink="/pet/{{pet._id}}">
                 <td>{{pet.name}}</td>
                 <td>{{pet.species}}</td>
                 <!-- <td>{{pet.sex}}</td> -->
