--- a/src/app/pet-carousel/pet-carousel.component.html
+++ b/src/app/pet-carousel/pet-carousel.component.html
@@ -1,7 +1,8 @@
 <div id="carouselExampleIndicators" class="carousel slide " data-ride="carousel">
     <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" *ngFor="let pet of displayedPets; index as i" data-slide-to="i"
-            [class.active]="i === 0"></li>
+        <li data-target="#carouselExampleIndicators" *ngFor="let image of petImages; index as i" data-slide-to="i"
+            [class.active]="i === 0">
+        </li>
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item" *ngFor="let image of petImages; index as i" [class.active]="i === 0">
