added edit pet functionality

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,7 +15,7 @@
                         <a routerLink="/pets">Check out Pets</a>
                     </li>
                     <li>
-                        <a routerLink="/petlist">Browse Catalogue</a>
+                        <a routerLink="/pet-list">Browse Catalogue</a>
                     </li>
                 </ul>
             </div>
