--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,10 +15,10 @@
                 <a class="nav-link" routerLink="/pets" routerLinkActive="active">Pets</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="/petlist" routerLinkActive="active">Catalogue</a>
+                <a class="nav-link" routerLink="/pet-list" routerLinkActive="active">Catalogue</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="/petform" routerLinkActive="active">Pet Request</a>
+                <a class="nav-link" routerLink="/pet-form" routerLinkActive="active">Pet Request</a>
             </li>
         </ul>
     </div>
