added pet removal functionality

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -18,7 +18,10 @@
                 <a class="nav-link" routerLink="/pet-list" routerLinkActive="active">Catalogue</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="/pet-form" routerLinkActive="active">Pet Request</a>
+                <a class="nav-link" routerLink="/pet-form" routerLinkActive="active">Request Pet</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/pets/remove" routerLinkActive="active">Remove Pet</a>
             </li>
         </ul>
     </div>
