--- a/src/app/pet-edit/pet-edit.component.html
+++ b/src/app/pet-edit/pet-edit.component.html
@@ -50,7 +50,7 @@
             </small>
         </div>
     </div>
-    <div class="container success-container alert alert-success mt-3" [hidden]="!petEditted">
+    <div class="container success-container alert alert-success mt-3" *ngIf="petEditted">
         <h4 class="alert-heading">Success!</h4>
         <h5>Pet successfully editted</h5>
         <a routerLink="/pet/{{pet._id}}">
