added pet search functionality

--- a/src/app/pet-delete/pet-delete.component.html
+++ b/src/app/pet-delete/pet-delete.component.html
@@ -1,5 +1,5 @@
 <div>
-    <section class="bg-dark container pb-3">
+    <section class="container pb-3">
         <h1 class="text-light">Remove Pet</h1>
         <p class="text-light">Remove pets from the listing that no longer interest you.
             Once a pet has been deleted it cannot be undone!
