--- a/src/app/pet-list/pet-list.component.html
+++ b/src/app/pet-list/pet-list.component.html
@@ -1,21 +1,19 @@
 <div>
-    <table class="table table-bordered table-hover table-light w-75 mx-auto mt-3">
+    <table class="table table-bordered table-hover table-light mx-auto mt-3">
         <thead class="thead-dark">
             <tr>
                 <th>Name</th>
                 <th>Species</th>
                 <th>Sex</th>
                 <th>In Stock</th>
-                <!-- <th>id</th> -->
             </tr>
         </thead>
         <tbody class="tbody">
-            <tr *ngFor="let pet of pets" routerLink="/pet/{{pet._id}}">
+            <tr *ngFor="let pet of petlist" routerLink="/pet/{{pet._id}}">
                 <td>{{pet.name}}</td>
                 <td>{{pet.species}}</td>
                 <td>{{pet.sex}}</td>
                 <td>{{pet.in_stock}}</td>
-                <!-- <td>{{pet._id}}</td> -->
             </tr>
         </tbody>
     </table>
