fixed pet search

--- a/src/app/catalogue/catalogue.component.html
+++ b/src/app/catalogue/catalogue.component.html
@@ -24,7 +24,7 @@
             <div class="form-group col-sm-2">
                 <label for="stockInput">Stock: </label>
                 <select class="form-control" id="stockInput" [(ngModel)]="inputs.in_stock" name="stock">
-                    <option value="null" selected>None selected</option>
+                    <option value="" selected>None selected</option>
                     <option value="true">In stock</option>
                     <option value="false">Not in stock</option>
                 </select>
