--- a/src/app/pet-details/pet-details.component.html
+++ b/src/app/pet-details/pet-details.component.html
@@ -16,7 +16,7 @@
             </a>
         </div>
     </div>
-    <div class="container success-container alert alert-success mt-3" [hidden]="!petPurchased">
+    <div class="container success-container alert alert-success mt-3" *ngIf="petPurchased" [hidden]="!petPurchased">
         <h4 class="alert-heading">Success!</h4>
         <h5>You purchased the following: </h5>
         <p>{{pet.name}} the {{pet.species}}</p>
