--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -21,7 +21,7 @@
                 <a class="nav-link" routerLink="/pet-form" routerLinkActive="active">Request Pet</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="/pets/remove" routerLinkActive="active">Remove Pet</a>
+                <a class="nav-link" routerLink="/pets-remove" routerLinkActive="active">Remove Pet</a>
             </li>
         </ul>
     </div>
